--- a/frontend-vendedores/src/app/components/sellers/sellers.component.html
+++ b/frontend-vendedores/src/app/components/sellers/sellers.component.html
@@ -4,7 +4,9 @@
   <div class="display-6 my-5">Produtos Cadastrados:</div>
 
   <button class="btn btn-primary mb-4">Novo</button>
-  <div class="border border-2 rounded mt-5 p-0 shadow col-sm-12 offset-sm-0 col-lg-10 offset-lg-1">
+  <div
+    class="border border-2 rounded mt-5 p-0 shadow col-sm-12 offset-sm-0 col-lg-10 offset-lg-1"
+  >
     <table class="table table-hover table-striped m-0">
       <thead>
         <tr>
@@ -12,24 +14,27 @@
           <th scope="col">Nome</th>
           <th scope="col">Gênero</th>
           <th scope="col">Salário</th>
-          <th scope="col">Bonificação </th>
+          <th scope="col">Bonificação</th>
+          <th scope="col" class="d-none d-md-table-cell text-end pe-3">Ações</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="table-group-divider">
         <tr>
           <th scope="row">1</th>
           <td>Mark</td>
           <td>Otto</td>
           <td>mdo</td>
           <td>mdo</td>
+          <td class="text-end pe-3">
+            <button class="btn p-1">
+              <i class="bi bi-pencil"></i>
+            </button>
+            <button class="btn p-1">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
         </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>mdo</td>
-          <td>Thornton</td>
-          <td>fat</td>
-        </tr>
+        
       </tbody>
     </table>
   </div>
