--- a/frontend-vendedores/src/app/components/navbar/navbar.component.html
+++ b/frontend-vendedores/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,17 @@
-<nav
-  class="navbar navbar-expand-lg navbar-dark bg-primary opacity-75 "
->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary opacity-75">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><i class="bi bi-box-fill"></i> CadALL</a>
     <button
       class="navbar-toggler"
       type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
+      (click)="isCollapsed = !isCollapsed"
       aria-controls="navbarSupportedContent"
-      aria-expanded="false"
+      aria-expanded="!isCollapsed"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div [ngbCollapse]="isCollapsed" class="navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a
@@ -22,18 +19,15 @@
             aria-current="page"
             routerLink="/home"
             routerLinkActive="active"
-            >Home</a
-          >
+            >Home</a>
         </li>
-
         <li class="nav-item">
           <a
             class="nav-link"
             aria-current="page"
             routerLink="/sellers"
             routerLinkActive="active"
-            >Vendedores</a
-          >
+            >Vendedores</a>
         </li>
       </ul>
     </div>
